[package]
name = "ssd1306-rotation-panic"
version = "0.0.1"
authors = ["Philip L. McMahon <philip.l.mcmahon@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7.7"
rp2040-hal = "0.9.0"
cortex-m-rt = { version = "0.7.3", optional = true }
rp2040-boot2 = { version = "0.3.0", optional = true }
seeeduino-xiao-rp2040 = "0.5.0"
ssd1306 = "0.8.2"
critical-section = "1.0.0"
embedded-hal ="0.2.7"
inverted-pin = "0.2.0"
fugit = "0.3.7"

[features]
default = ["boot2", "rt", "critical-section-impl", "rom-func-cache"]
critical-section-impl = ["rp2040-hal/critical-section-impl"]
boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt","rp2040-hal/rt"]
rom-func-cache = ["rp2040-hal/rom-func-cache"]
